injectable/tests/ui/unknown_attribute.stderr
error: unknown injectable attribute: `bad_attribute`
 --> tests/ui/unknown_attribute.rs:8:14
  |
8 | #[injectable(bad_attribute)]
  |              ^^^^^^^^^^^^^
